# HW_WEB1

./: README.md
Project_Core_group1_ver.1/: README.md  pyproject.toml
